2006-06-06  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-gecko-utils.cpp: 
	Make monospace fonts change size when asked (bug #344003)

2006-05-30  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Fix man page fallback for info pages again
	
        * src/yelp-toc-pager.c:
        Escape & characters when encountered in info processing (fixes #343372)

2006-05-29  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (process_mandir_pending):
	* src/yelp-utils.c: (yelp_doc_info_new):
	fix two small memory leaks.

2006-05-29  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Fix loading of info pages from subdirs in some cases
	
	* src/gtkentryaction.c: 
	Free text after use

	* src/yelp-info-parser.c: 
	Assume the tag tables given in info files are wrong.  They mostly are.
	Instead, we set the tag tables to the correct offsets ourselves
	Also, fix a problem loading certain info sections from menus
	
2006-06-28  Frederic Peters <fpeters@0d.be>

	* src/yelp-search-pager.c:
	* stylesheets/search2html.xsl:
	more helpful message when there are no search results (fixes #341798)
	search results message can be translated (fixes #341689)
	limit search results to 20 items (fixes #341434)

2006-05-26  Brent Smith  <gnome@nextreality.net>

	* src/yelp-man-parser.c: (parser_append_given_text_handle_escapes):
	don't increment ptr, fixes #341827 - Don Scorgie
	* src/yelp-search-pager.c:
	get rid of pointless YelpListing type
	* src/yelp-toc-pager.c: (process_mandir_pending),
	(process_cleanup), (xslt_yelp_document):
	Need to allocate memory for encoding b/c xmlFreeDoc tries to free
	this
	cleanup the man_secthash hash table when finished

2006-05-26  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c:
	Free newly created doc when finished (revert of previous change)
	Fix some other memory leaks
	
	* src/yelp-info-parser.c: 
	Fix an invalid write (fix bug #342151, again)
	Fix a bucket-load more memory leaks
	