@@ -1,3 +1,9 @@
+2006-06-10  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* stylesheets/info2html.xsl: 
+	* src/yelp-info-parser.c: 
+	Make *Notes into hyperlinks (bug #343524)
+	
 2006-06-06  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-gecko-utils.cpp: 
